# review-bot

./: .dockerignore  .eslintrc.js  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT_PLAN.md  Dockerfile  MANIFEST.in  README.md  install.sh  install_simple.sh  jest.config.js  package.json  project-setup-guide.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: publish.yml
archive/typescript-version/: tsconfig.json
archive/typescript-version/src/: index.ts
archive/typescript-version/src/core/: git.manager.ts  prompt.manager.ts  review.manager.ts
archive/typescript-version/src/providers/: gemini.provider.ts
archive/typescript-version/tests/: setup.ts
cli/: main.py
core/: config_manager.py  git_manager.py  prompt_manager.py  review_manager.py  todo_manager.py
models/: types.py
prompts/: default.md  performance-focused.md  security-focused.md
providers/: __init__.py  base.py  claude.py  gemini.py  openai.py
src/cli/: index.ts
src/core/: config.manager.ts  index.ts  todo.manager.ts
src/providers/: base.provider.ts  chatgpt.provider.ts  claude.provider.ts  index.ts
src/types/: index.ts
tests/: __init__.py  conftest.py  test_basic.py  test_integration.py
tests/core/: test_config_manager.py  test_git_manager.py  test_prompt_manager.py  test_review_manager.py  test_todo_manager.py
tests/models/: test_types.py
tests/providers/: test_base.py  test_claude.py
tests/unit/: config.manager.test.ts  prompt.manager.test.ts
web/: app.py
